validator_derive_tests/tests/compile-fail/custom/missing_function_arg.stderr
error: Invalid attribute #[validate] on field `s`: Validator `custom` requires the function parameter
 --> $DIR/missing_function_arg.rs:5:5
  |
5 |     #[validate(custom(arg = "i64"))]
  |     ^
